--- a/wbdv-spring21-jhz-server-java/src/main/webapp/cover.css
+++ b/wbdv-spring21-jhz-server-java/src/main/webapp/cover.css
@@ -12,9 +12,6 @@
 }
 
 
-/*
- * Base structure
- */
 
 body {
   text-shadow: 0 .05rem .1rem rgba(0, 0, 0, .5);
@@ -26,10 +23,9 @@ body {
 }
 
 
-/*
- * Header
- */
+.wbdv-table-title {
 
+}
 .nav-masthead .nav-link {
   padding: .25rem 0;
   font-weight: 700;
